--- a/project/proj2/index.html
+++ b/project/proj2/index.html
@@ -20,7 +20,7 @@
   
   
 
-  <meta name="author" content="Patanjali SLPSK">
+  <meta name="author" content="Sareena K P">
 
   
   
@@ -30,7 +30,7 @@
   <meta name="description" content="The advent of IoT has led to massive data generation due to the widespread deployment of sensors, networks, and processing devices. Deep Learning has emerged as a popular computing paradigm that is used to process these large scale data and gather useful information. Of late, companies like Amazon and Google have provided cloud-based Deep Learning solutions. These solutions are referred to as Deep Learning as a Service (DLaaS). Recent works have demonstrated that these DLaaS systems are quite vulnerable to adversarial attacks.">
 
   
-  <link rel="alternate" hreflang="en-us" href="https://patanjali.github.io/project/proj2/">
+  <link rel="alternate" hreflang="en-us" href="https://sareenakp.github.io/project/proj2/">
 
   
 
@@ -119,7 +119,7 @@
   <link rel="icon" type="image/png" href="/img/icon.png">
   <link rel="apple-touch-icon" type="image/png" href="/img/icon-192.png">
 
-  <link rel="canonical" href="https://patanjali.github.io/project/proj2/">
+  <link rel="canonical" href="https://sareenakp.github.io/project/proj2/">
 
   
   
@@ -133,10 +133,10 @@
   <meta property="twitter:site" content="@slpsk">
   <meta property="twitter:creator" content="@slpsk">
   
-  <meta property="og:site_name" content="Patanjali SLPSK">
-  <meta property="og:url" content="https://patanjali.github.io/project/proj2/">
-  <meta property="og:title" content="Privacy aware Deep Learning  | Patanjali SLPSK">
-  <meta property="og:description" content="The advent of IoT has led to massive data generation due to the widespread deployment of sensors, networks, and processing devices. Deep Learning has emerged as a popular computing paradigm that is used to process these large scale data and gather useful information. Of late, companies like Amazon and Google have provided cloud-based Deep Learning solutions. These solutions are referred to as Deep Learning as a Service (DLaaS). Recent works have demonstrated that these DLaaS systems are quite vulnerable to adversarial attacks."><meta property="og:image" content="https://patanjali.github.io/img/icon-192.png">
+  <meta property="og:site_name" content="Sareena K P">
+  <meta property="og:url" content="https://sareenakp.github.io/project/proj2/">
+  <meta property="og:title" content="Privacy aware Deep Learning  | Sareena K P">
+  <meta property="og:description" content="The advent of IoT has led to massive data generation due to the widespread deployment of sensors, networks, and processing devices. Deep Learning has emerged as a popular computing paradigm that is used to process these large scale data and gather useful information. Of late, companies like Amazon and Google have provided cloud-based Deep Learning solutions. These solutions are referred to as Deep Learning as a Service (DLaaS). Recent works have demonstrated that these DLaaS systems are quite vulnerable to adversarial attacks."><meta property="og:image" content="https://sareenakp.github.io/img/icon-192.png">
   <meta property="og:locale" content="en-us">
   
   
@@ -147,7 +147,7 @@
 
   
 
-  <title>Privacy aware Deep Learning  | Patanjali SLPSK</title>
+  <title>Privacy aware Deep Learning  | Sareena K P</title>
 
 </head>
 <body id="top" data-spy="scroll" data-target="#TableOfContents" data-offset="71" >
@@ -187,7 +187,7 @@
   <div class="container">
 
     
-      <a class="navbar-brand" href="/">Patanjali SLPSK</a>
+      <a class="navbar-brand" href="/">Sareena K P</a>
       
       <button type="button" class="navbar-toggler" data-toggle="collapse"
               data-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
@@ -477,7 +477,7 @@
   
 
   <div class="media-body">
-    <h5 class="card-title" itemprop="name"><a href="/authors/patanjali">Patanjali SLPSK</a></h5>
+    <h5 class="card-title" itemprop="name"><a href="/authors/patanjali">Sareena K P</a></h5>
     <h6 class="card-subtitle">Ph.D. student</h6>
     <p class="card-text" itemprop="description">My research interests include energy efficient computing and hardware security.</p>
     <ul class="network-icon" aria-hidden="true">
