Fixed incorrect references

--- a/404.html
+++ b/404.html
@@ -130,8 +130,8 @@
   
   <meta property="twitter:card" content="summary">
   
-  <meta property="twitter:site" content="@slpsk">
-  <meta property="twitter:creator" content="@slpsk">
+  <meta property="twitter:site" content="@sareenakp">
+  <meta property="twitter:creator" content="@sareenakp">
   
   <meta property="og:site_name" content="Sareena K P">
   <meta property="og:url" content="https://sareenakp.github.io/404.html">
