--- a/publication/paper/eradicator/index.html
+++ b/publication/paper/eradicator/index.html
@@ -132,8 +132,8 @@ We evaluate Eradicator with a real-life example of coolant purity monitoring con
   
   <meta property="twitter:card" content="summary">
   
-  <meta property="twitter:site" content="@slpsk">
-  <meta property="twitter:creator" content="@slpsk">
+  <meta property="twitter:site" content="@sareenakp">
+  <meta property="twitter:creator" content="@sareenakp">
   
   <meta property="og:site_name" content="Sareena K P">
   <meta property="og:url" content="https://sareenakp.github.io/publication/arxiv/paper4/">
