--- a/index.html
+++ b/index.html
@@ -1234,7 +1234,7 @@ card terminals, etc. for the European and American markets.</li>
       
       <li>
         <i class="fa-li fas fa-envelope fa-2x" aria-hidden="true"></i>
-        <span id="person-email" itemprop="email"><a href="mailto:sareenakp.kp@gmail.com">sareenakp.slpsk@gmail.com</a></span>
+        <span id="person-email" itemprop="email"><a href="mailto:sareenakp.kp@gmail.com">sareenakp.kp@gmail.com</a></span>
       </li>
       
 
