Fixed incorrect references

--- a/index.html
+++ b/index.html
@@ -1035,7 +1035,7 @@ card terminals, etc. for the European and American markets.</li>
   <div class="media-body">
 
     <h3 class="article-title mb-0 mt-0" itemprop="name">
-      <a href="/publication/paper/eradicator/" itemprop="url"> Eradicator: An Integrated Approach for Defense against Cyber Attacks in PLC based Industrial Control Systems </a>
+      <a href=" " itemprop="url"> Eradicator: An Integrated Approach for Defense against Cyber Attacks in PLC based Industrial Control Systems </a>
     </h3>
 
     
@@ -1118,8 +1118,13 @@ card terminals, etc. for the European and American markets.</li>
   <div class="media-body">
 
     <h3 class="article-title mb-0 mt-0" itemprop="name">
+<!--       <a href="/publication/poster/malware2/" itemprop="url">Early Malware Detection using Traffic Analysis
+</a> -->
+
       <a href="/publication/poster/malware2/" itemprop="url">Early Malware Detection using Traffic Analysis
 </a>
+
+
     </h3>
 
         <div class="article-style" itemprop="articleBody"> Sareena Karapoola, Chester Rebeiro, Unnati Parekh, Kamakoti Veezhinathan, <b> Young Reserchers Forum, SPACE,</b> 2018.
@@ -1154,7 +1159,7 @@ card terminals, etc. for the European and American markets.</li>
   <div class="media-body">
 
     <h3 class="article-title mb-0 mt-0" itemprop="name">
-      <a href="/publication/poster/ddos/" itemprop="url"> A Secure Framework for Quick and Effective DDoS Mitigation </a>
+      <a href=" " itemprop="url"> A Secure Framework for Quick and Effective DDoS Mitigation </a>
     </h3>
 
 
