Fixed incorrect references

--- a/index.html
+++ b/index.html
@@ -1121,7 +1121,7 @@ card terminals, etc. for the European and American markets.</li>
 <!--       <a href="/publication/poster/malware2/" itemprop="url">Early Malware Detection using Traffic Analysis
 </a> -->
 
-      <a href="/publication/poster/malware2/" itemprop="url">Early Malware Detection using Traffic Analysis
+      <a href="" itemprop="url">Early Malware Detection using Traffic Analysis
 </a>
 
 
