--- a/index.html
+++ b/index.html
@@ -954,7 +954,7 @@ card terminals, etc. for the European and American markets.</li>
             </ul> -->
 
     <h3 class="article-title mb-0 mt-0" itemprop="name">
-      <a href="/publication/poster/paper5/" itemprop="url"> Net-Police: A Network Patrolling Service for Effective Mitigation of Volumetric DDoS Attacks.</a>
+      <a href="https://doi.org/10.1016/j.comcom.2019.11.034" itemprop="url"> Net-Police: A Network Patrolling Service for Effective Mitigation of Volumetric DDoS Attacks.</a>
     </h3>
 
     <div class="article-style" itemprop="articleBody"> Sareena Karapoola, Prasanna Karthik Vairam, Shankar Raman, Kamakoti Veezhinathan, <b> Elsevier Computer Communications, 2020 </b> (To be published).
@@ -1271,7 +1271,7 @@ card terminals, etc. for the European and American markets.</li>
       
       <li>
         <i class="fa-li fas fa-envelope fa-2x" aria-hidden="true"></i>
-        <span id="person-email" itemprop="email"><a href="mailto:sareenakp.kp@gmail.com">sareenakp.kp@gmail.com</a></span>
+        <span id="person-email" itemprop="email"><a href="mailto:sareena.kp@gmail.com">sareenakp.kp@gmail.com</a></span>
       </li>
       
 
