--- a/index.html
+++ b/index.html
@@ -532,7 +532,7 @@
     
     <h1>Biography</h1>
 
-    <p>I am a Ph.D. (Integrated MS and Ph.D.) scholar in the Department of Computer Science and Engineering at the Indian Institute of Technology Madras, broadly working in the area of network security. I am being advised by Prof. Kamakoti Veezhinathan. </p>
+    <p>I am a Ph.D. (Integrated MS and Ph.D.) scholar in the Department of Computer Science and Engineering at the Indian Institute of Technology Madras, broadly working in the area of cyber-security. I am being advised by Prof. Kamakoti Veezhinathan. </p>
 
 <p> Prior to joining Ph.D., I have worked in Hewlett-Packard,Bangalore, India (2004-2006), and Identive Technologies, Chennai, India (2006-2014), where I was involved in the development of embedded products and system software. Specifically, I was involved in the development of drivers for storage SCSI controllers, and firmware and drivers for smart card reader and physical access control systems. </p> 
 <p>My present research areas include the development of novel DDoS mitigation strategies, traceback of DDoS attackers, comprehensive malware behavioral analysis, early malware detection, and cyber security in Industrial Control Systems.</p>
